--- a/library.html
+++ b/library.html
@@ -25,7 +25,7 @@
     
     <div id="library-container">
     <h1 id="library-name">Library</h1>
-    <img src="elements/backbutton.jpg" alt="backbutton" class="backbutton">
+    <img src="elements/backbutton.png" alt="backbutton" class="backbutton">
     <input type="text" id="search-bar" placeholder="Search for a book..." onkeyup="searchBooks()">
 
     <select id="categoryFilter">
