--- a/student.html
+++ b/student.html
@@ -17,7 +17,7 @@
 
     <div id="library-list"></div> <!-- Buttons will be added here -->
     
-    <img src="elements/backbutton.jpg" alt="backbutton" class="backbutton">
+    <img src="elements/backbutton.png" alt="backbutton" class="backbutton">
     <img src="elements/bookshelf.png" alt="bookshelf" class="bookshelf">
 </body>
 
